check for GPS on Startup, minor dialog rework